# ml4de-hackathon-flyingpolarbears

./: .gitignore  LICENSE  README  pyproject.toml  requirements.txt  scratch.ipynb
aux_functions/: ks_data_generator.py  ks_eval.py  lorenz_data_generator.py  lorenz_eval.py  zero_data_generator.py
challenge-1/: ks_pinn.ipynb
challenge-1/aux_functions/: ks_data_generator.py
challenge-1/data/: lorenz_training.npy
challenge-1/nbs/: lorenz_mlp.ipynb  lorenz_mlp_with_lyapunov.ipynb
challenge-1/saved_models/: model.ckpt-1000.pt
challenge-2/: README.md  dho.ipynb  dynamics.ipynb  eval.ipynb  model.ipynb
data/: lorenz_truth.npy
nbs/: burgers_pinn.ipynb  ks_fno.ipynb  lorenz_mlp.ipynb  lorenz_mlp_with_lyapunov.ipynb
saved_models/: model.ckpt-2000.pt
