[project]
name = "ml4de-hackathon-minimal"
version = "0.0.1"
description = "Minimal example for the ML4DE hackathon"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "pip",
    "torch",
    "numpy",
    "deepxde",
    "neuraloperator",
]

[project.scripts]


[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"
output-format = "concise"